--- a/src/styles/HeaterDemo.css
+++ b/src/styles/HeaterDemo.css
@@ -14,12 +14,12 @@
 }
 .configTitle{
   text-align: right;
-  font-size: medium;
 }
 .configTitle h5{
   color:white;
   font-size: 1.1rem;
   margin: 8px 0px 0px 0px;
+  transition: ease-in all 0.2s;
 }
 
 .right{
@@ -44,6 +44,7 @@
 }
 .infoPic{
   width:100%;
+  max-width: 250px;
 }
 
 #verticalRange {
@@ -53,21 +54,25 @@
   margin-left: 20px;
 }
 #lengthRange {
-  width:300px;
+  max-width:300px;
+  width:100%;
+  margin-left: 45px;
 }
 #diamRange {
   width:132px;
 }
 #verticalCol {
   height:132px;
+  margin-right: -105px;
 }
 #heaterIllustration{
-  width:300px;
-  height:132px;
+  width:100%;
+  max-width:300px;
+  max-height:132px;
   margin-top:10px;
 }
 #diamIllustration{
-  width:132px;
+  max-width:132px;
   height:132px;
   margin-top:10px;
 }
@@ -99,4 +104,11 @@
 }
 .form-select {
   width:auto;
+}
+
+@media (max-width: 575px) {
+  .configTitle h5{
+    font-size: 0.88rem;
+    margin: 10px 0px 0px 0px;
+  }
 }
