--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -371,13 +371,58 @@ button {
   width: 100%;
 }
 
-.triangle {
-  width: 45%;
+.circle-container {
   position: absolute;
-  top: -7%;
-  left: 27%;
+  width: 85%;
+  height: 85%;
+  top: 7.5%; 
+  left: 7.5%; 
+  border-radius: 50%;
+  animation: spin 60s linear infinite;
+  margin: auto;
   z-index: 1; /* Adjust the z-index to position the image on top */
-  animation: spin 60s linear infinite; /* Adjust duration of spin animation */
+}
+
+.circle-item {
+  position: absolute;
+  transform-origin: center;
+  width: 100%; 
+  height: 100%;
+}
+
+:root {
+  --starting-degree: 0deg;
+  --duration: 60s;
+}
+
+.circle-icon {
+  position: absolute;
+  background: #430919;
+  border-radius: 100%;
+  box-shadow: 3px 3px 5px #430919;
+  height: 60px;
+  width: 60px;
+  cursor: pointer;
+  transition: all 0.5s ease; /* Smooth transition effect */
+  bottom: 0;
+  left: 0;
+  transform-origin: center;
+  animation: counterspin var(--duration) infinite linear;
+}
+.circle-icon svg{
+  width: 50%;
+  height: 50%;
+  margin: 25%;
+  color: white;
+}
+
+@keyframes counterspin {
+  from {
+    transform: rotate(var(--starting-degree));
+  }
+  to {
+    transform: rotate(calc(var(--starting-degree) - 360deg));
+  }
 }
 
 @keyframes spin {
