tweaked the rotating icons to pause on hover, added view on hover to work columns, added default selection for comment writer

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -360,15 +360,29 @@ button {
 .bann-img {
   position: relative;
   max-width: 360px;
+  border-radius: 100%;
 }
 
 .bann-img figure {
   margin: 0;
+  border-radius: 100%;
+  border: 10px solid whitesmoke;
   transition: transform 0.5s ease; /* Smooth transition effect */
 }
 
 .bann-img figure img {
   width: 100%;
+  border-radius: 100%;
+  box-shadow: 0 0 8px 8px whitesmoke inset;
+}
+
+.bann-img:hover figure {
+  transform: scale(1.03); /* Zoom effect on hover */
+}
+
+:root {
+  --starting-degree: 0deg;
+  --duration: 60s;
 }
 
 .circle-container {
@@ -377,10 +391,15 @@ button {
   height: 85%;
   top: 7.5%; 
   left: 7.5%; 
-  border-radius: 50%;
-  animation: spin 60s linear infinite;
+  border-radius: 100%;
+  animation: spin var(--duration) linear infinite;
   margin: auto;
   z-index: 1; /* Adjust the z-index to position the image on top */
+  transition: transform 0.5s ease; /* Smooth return */
+}
+
+.bann-img:hover .circle-container, .bann-img:hover .circle-icon {
+  animation-play-state: paused;
 }
 
 .circle-item {
@@ -388,11 +407,11 @@ button {
   transform-origin: center;
   width: 100%; 
   height: 100%;
-}
+  border-radius: 100%;
+  user-select: none;
+  z-index: 0; /* Ensure circle-item is below circle-icon */
+  pointer-events: none; /* Ensure circle-item does not block pointer events */
 
-:root {
-  --starting-degree: 0deg;
-  --duration: 60s;
 }
 
 .circle-icon {
@@ -402,13 +421,19 @@ button {
   box-shadow: 3px 3px 5px #430919;
   height: 60px;
   width: 60px;
-  cursor: pointer;
+  /*cursor: pointer; add click to scroll later */
   transition: all 0.5s ease; /* Smooth transition effect */
   bottom: 0;
   left: 0;
-  transform-origin: center;
   animation: counterspin var(--duration) infinite linear;
+  z-index:2;
+  pointer-events: auto; /* Ensure circle-icon can receive pointer events */
+
 }
+.circle-icon:hover {
+  transform: scale(1.03);
+}
+
 .circle-icon svg{
   width: 50%;
   height: 50%;
@@ -432,10 +457,6 @@ button {
   to {
     transform: rotate(360deg);
   }
-}
-
-.bann-img:hover figure {
-  transform: scale(1.03); /* Zoom effect on hover */
 }
 
 .big-button {
@@ -510,6 +531,7 @@ h3.white {
 }
 
 .work_pic {
+  position: relative;
   margin-bottom: 20px;
 }
 
@@ -519,9 +541,45 @@ h3.white {
   border-radius: 0.5rem;
 }
 
-.work_pic img:hover {
+.work_pic:hover img {
   transform: scale(0.99);
 }
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.work_pic:hover .overlay {
+  opacity: 1;
+}
+
+.overlay button {
+  color: #ff283f; 
+  background: white; 
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  border-radius: 5px;
+  transition: all 0.5s ease;
+}
+
+.overlay button:hover {
+  color: white; 
+  background: #ff283f; 
+}
+
 .work-col {
   display: grid;
   margin-bottom: 30px;
@@ -543,13 +601,13 @@ h3.white {
   background-color: #430919;
   box-shadow: 0px 0px 10px 2px black;
   border-radius: 100%;
-  color: whitesmoke;
 }
 .github_bubble:hover{
-  color: #e70139;
-  transform: translate(2px, 2px);
+  background-color: #6f0720;
+  transform: translate(1.5px, 1.5px);
 }
 .github_bubble svg{
+  color: whitesmoke;
   width:30px;
   height: 30px;
 }
