--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,11 +1,20 @@
-/*--------------------------------------------------------------------- File Name: style.css ---------------------------------------------------------------------*/
-
-/*--------------------------------------------------------------------- import Fonts ---------------------------------------------------------------------*/
+/*---- import Fonts ----*/
 
 @import url("https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap");
 
-/*--------------------------------------------------------------------- skeleton ---------------------------------------------------------------------*/
+/*---- global ----*/
+
+:root {
+  /*--- theme colors ----*/
+  --color-primary: #ff283f;
+  --color-secondary: #6f0720;
+  --color-dark: #430919;
+  --color-black: #000000;
+  --color-text: #ffffff;
+  --color-text-lighter: whitesmoke;
+  --color-text-grey: #666666;
+}
 
 * {
   box-sizing: border-box !important;
@@ -16,14 +25,17 @@ html {
 }
 
 body {
-  background: black;
-  color: #666666;
+  background: var(--color-black);
+  color: var(--color-text-grey);
   font-size: 14px;
   font-family: "Lato", sans-serif;
   line-height: 1.80857;
   font-weight: normal;
+  overflow-x: hidden;
 }
-
+#root {
+  overflow: hidden;
+}
 a {
   text-decoration: none !important;
   outline: none !important;
@@ -138,7 +150,7 @@ img {
 }
 
 .form-control:focus {
-  border-color: #ffffff !important;
+  border-color: var(--color-text) !important;
   box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
 }
 
@@ -177,7 +189,7 @@ button {
   position: relative;
 }
 
-/*-- fading --*/
+/*---- fading ----*/
 .fade-in-element { /* js fade in, set to .visible */
   opacity: 0;
   transition: opacity 1s ease-in-out;
@@ -200,16 +212,16 @@ button {
     opacity: 1;
   }
 }
-/*-- end fading --*/
+/*---- end fading ----*/
 
-/*-- background --*/
+/*---- background ----*/
 #back-to-top {
   position: fixed;
   bottom: 0;
   right: 0;
-  background: #430919;
+  background: var(--color-dark);
   border-radius: 100%;
-  box-shadow: 3px 3px 5px #430919;
+  box-shadow: 3px 3px 5px var(--color-dark);
   height: 50px;
   width: 50px;
   margin: 20px;
@@ -224,26 +236,25 @@ button {
 }
 #back-to-top:hover {
   transform: translate(2px, 2px);
+  background: var(--color-secondary)
 }
 #cylinder1 {
   top: -400px;
   left: 500px;
-  position: fixed;
-  background-color: #430919;
+  background-color: var(--color-dark);
 }
 #cylinder2 {
   top: 0px;
   left: 400px;
-  position: fixed;
-  background-color: #430919;
+  background-color: var(--color-dark);
 }
 #cylinder3 {
   top: -600px;
   left: 1000px;
-  position: fixed;
-  background-color: #6f0720;
+  background-color: var(--color-secondary);
 }
 .cylinder {
+  position: fixed;
   z-index: -1;
   width: 70px; /* Adjust width */
   height: 600px; /* Adjust height */
@@ -275,9 +286,9 @@ button {
     opacity: 0; /* Fade out at the end */
   }
 }
-/*-- end background --*/
+/*---- end background ----*/
 
-/*-- navigation--*/
+/*---- navigation ----*/
 .navbar-nav .dropdown-menu {
   background-color: black;
   box-shadow: 4px 4px 8px 3px black;
@@ -312,16 +323,16 @@ button {
 
 .logo img {
   border-radius: 100%;
-  box-shadow: 0px 0px 5px 5px #430919;
+  box-shadow: 0px 0px 5px 5px var(--color-dark);
   transition: transform 0.5s ease; /* Smooth transition effect */
 }
 .logo img:hover {
   transform: translate(2px, 2px);
 }
 
-/*-- end navigation--*/
+/*---- end navigation ----*/
 
-/** banner section **/
+/*---- banner section ----*/
 
 .socials svg {
   width: 30px;
@@ -416,9 +427,9 @@ button {
 
 .circle-icon {
   position: absolute;
-  background: #430919;
+  background: var(--color-dark);
   border-radius: 100%;
-  box-shadow: 3px 3px 5px #430919;
+  box-shadow: 3px 3px 5px black;
   height: 60px;
   width: 60px;
   /*cursor: pointer; add click to scroll later */
@@ -463,7 +474,7 @@ button {
   border-radius: 0.5rem;
   font-size: 20px;
   background-color: #fff;
-  color: #ff283f;
+  color: var(--color-primary);
   font-weight: 600;
   padding: 22px 0px;
   width: 100%;
@@ -480,7 +491,7 @@ button {
 }
 
 .big-button:hover {
-  background-color: #ff283f;
+  background-color: var(--color-primary);
   color: #fff;
   cursor: pointer;
 }
@@ -511,9 +522,9 @@ h3.white {
   max-width: 1170px;
 }
 
-/** end banner section **/
+/*---- end banner section ----*/
 
-/** work section **/
+/*---- work section ----*/
 .work-col h2, .work-col h3 {
   font-size: 21px;
   color: #b3b3b3;
@@ -564,7 +575,7 @@ h3.white {
 }
 
 .overlay button {
-  color: #ff283f; 
+  color: var(--color-primary); 
   background: white; 
   padding: 10px 20px;
   cursor: pointer;
@@ -577,7 +588,7 @@ h3.white {
 
 .overlay button:hover {
   color: white; 
-  background: #ff283f; 
+  background: var(--color-primary); 
 }
 
 .work-col {
@@ -587,7 +598,7 @@ h3.white {
 .tech_bubble{
   padding:0 10px 0 10px;
   margin: 0 10px 10px 0;
-  background-color: #430919;
+  background-color: var(--color-dark);
   border-radius: 0.5rem;
   color: whitesmoke;
   font-size: 17px;
@@ -598,12 +609,12 @@ h3.white {
   padding:7px;
   width:45px;
   height: 45px;
-  background-color: #430919;
+  background-color: var(--color-dark);
   box-shadow: 0px 0px 10px 2px black;
   border-radius: 100%;
 }
 .github_bubble:hover{
-  background-color: #6f0720;
+  background-color: var(--color-secondary);
   transform: translate(1.5px, 1.5px);
 }
 .github_bubble svg{
@@ -611,9 +622,9 @@ h3.white {
   width:30px;
   height: 30px;
 }
-/** end work section **/
+/*---- end work section ----*/
 
-/** footer **/
+/*---- footer ----*/
 .contact-links {
   background: #fff;
   padding: 31px;
@@ -646,7 +657,7 @@ h3.white {
 }
 
 .copyright {
-  background: #6f0720;
+  background: var(--color-secondary);
   margin-top: 90px;
   position: relative;
 }
@@ -666,9 +677,9 @@ h3.white {
 .copyright a:hover {
   color: #000;
 }
-/** end footer **/
+/*---- end footer ----*/
 
-/** comment writer **/
+/*---- comment writer ----*/
 .factorGroup,#studentInfoDiv,#generateDiv{
   background:#e8e9ee;
 }
@@ -686,25 +697,25 @@ h3.white {
       top: 0;
   }
 }
-/** end comment writer **/
+/*---- end comment writer ----*/
 
-/*--------------------------------------------------------------------- Responsive ---------------------------------------------------------------------*/
+/*---- Responsive Breakpoints ----*/
 
-/*---xl-breakpoint---*/
+/*---- xl-breakpoint ----*/
 @media (min-width: 1200px){
   h2.white {
     min-height: 110px;
   }
 }
 
-/*---lg-breakpoint---*/
+/*---- lg-breakpoint ----*/
 @media (min-width: 992px) and (max-width: 1199px) {
   h2.white {
     min-height: 110px;
   }
 }
 
-/*---md-breakpoint---*/
+/*---- md-breakpoint ----*/
 @media (min-width: 768px) and (max-width: 991px) {
   .bann-img-col {
     height: auto;
@@ -722,7 +733,7 @@ h3.white {
   }
 }
 
-/*---sm-breakpoint---*/
+/*---- sm-breakpoint ----*/
 @media (min-width: 576px) and (max-width: 767px) {
   .bann-img-col {
     height: auto;
@@ -741,7 +752,7 @@ h3.white {
   }
 }
 
-/*---extra small (no breakpoint)---*/
+/*---- extra small (no breakpoint) ----*/
 @media (max-width: 575px) {
   .bann-img-col {
     height: auto;
