--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -378,8 +378,9 @@ button {
 }
 
 .bann-img figure {
-  width: 100%;
-  height: 100%;
+  background-color: rgba(65, 70, 75, 0.49);
+  width: 360px;
+  height: 360px;
   margin: 0;
   border-radius: 100%;
   border: 10px solid whitesmoke;
