adding new page - design to html and styles, adding to home page, moving navbar to components

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -114,7 +114,7 @@ ol {
   list-style: none;
 }
 
-p {
+p.home-text {
   margin: 0px;
   text-align: left;
   color: whitesmoke;
@@ -141,7 +141,7 @@ a,
 
 img {
   max-width: 100%;
-  height: auto;
+ /*height: auto;*/
 }
 
 :focus {
@@ -532,6 +532,11 @@ h3.white {
   padding: 0;
 }
 .hero-text {
+  margin: 0px;
+  color: whitesmoke;
+  font-size: 17px;
+  line-height: 30px;
+  font-weight: 400;
   text-align: center;
 }
 .container {
@@ -565,6 +570,8 @@ h3.white {
 .work_pic img {
   transition: ease-in all 0.2s;
   width: 100%;
+  max-width: 500px;
+  max-height: 315px;
   border-radius: 0.5rem;
 }
 
@@ -731,6 +738,7 @@ h3.white {
 }
 
 @media (min-width: 768px) {
+  
   .sticky-column {
       position: sticky;
       top: 0;
